--- a/client/src/index.html
+++ b/client/src/index.html
@@ -26,7 +26,7 @@
     Loading...<i class="fa fa-spinner fa-spin fa-3x fa-fw"></i>
   </app>
  
-
+  <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>  
   <% if (webpackConfig.metadata.isDevServer && webpackConfig.metadata.HMR !== true) { %>
   <!-- Webpack Dev Server reload -->
   <script src="/webpack-dev-server.js"></script>
